k8s/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nodeapp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  namespace: nodeapp
  labels:
    app: nodeapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeapp
        image: ${REPO_URL}/nodeapp:${IMAGE_TAG}
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
  namespace: nodeapp
spec:
  selector:
    app: nodeapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: nodeapp-managed-cert
  namespace: nodeapp
spec:
  defaultBackend:
    service:
      name: nodeapp-service
      port:
        number: 80
  rules:
  - host: nodeapp.hyperbit.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeapp-service
            port:
              number: 80
